{
    "name": "Controls",
    "maps": [
        {
            "name": "Touch",
            "id": "5524225c-b4fa-421c-8cd6-55fa4d08a795",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Value",
                    "id": "b8e57bb2-2f05-4bd9-81db-fc05d322a375",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "4ec46db5-2117-4341-82d3-b62fb2ae9d2b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchDelta",
                    "type": "Value",
                    "id": "60bcedad-7456-41fd-8c19-16bfae47a587",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchLifted",
                    "type": "Button",
                    "id": "4fd97d57-78e5-46d2-9bb6-93c745bac1ae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "77b47162-7b18-401f-9024-0a07e8535787",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87010c61-e95a-4b11-8a83-7ede135af6de",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1e57588-1fae-485a-8a3b-77fe22d95a7a",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e23b0418-6cea-428b-a537-13f4aa2ad9bd",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "TouchLifted",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}